[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Ships/NaveBase.gd" type="Script" id=2]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Ships/Player/ImpactoSFX.ogg" type="AudioStream" id=8]

[node name="NaveBase" type="RigidBody2D"]
z_as_relative = false
collision_layer = 0
collision_mask = 2147483648
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.1, 1.1, 1.1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3.64, 3.64 )

[node name="Canion" parent="." instance=ExtResource( 4 )]

[node name="InpactoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
